--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/DaleOCoileain/lotto/issues"
   },
-  "homepage": "https://github.com/DaleOCoileain/lotto#readme"
+  "homepage": "https://github.com/DaleOCoileain/lotto#readme",
+  "dependencies": {
+    "colors": "^1.4.0"
+  }
 }
